# baalue

./: .gitignore  Makefile.am  NEWS  README.md  TODO  configure.ac
Documentation/: howto_baalue.txt
man/: baalue.1
po/: POTFILES.in  de.po
scripts/: baalue_script.sh
src/: Makefile.am  common.h  main.c  threads.c
